syntax = "proto3";

//buf:lint:ignore PACKAGE_VERSION_SUFFIX
// Some doc
package authpb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";

service AuthSvc {
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse) {
    option (google.api.http) = {
      post: "/v1/auth/user/create";
      body: "*";
    };
  };
  rpc UserList(UserListRequest) returns (UserListResponse) {
    option (google.api.http) = {
      get: "/v1/auth/user/list";
    };
  };
  rpc UserUpdate(UserUpdateRequest) returns (UserUpdateResponse) {
    option (google.api.http) = {
      get: "/v1/auth/user/update";
    };
  };
  rpc UserChangePasswd(UserChangePasswdRequest) returns (UserChangePasswdResponse) {
    option (google.api.http) = {
      post: "/v1/auth/user/change/passwd";
    };
  };
  rpc LoginPasswd(LoginPasswdRequest) returns (LoginPasswdResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login/passwd";
      body: "*";
    };
  };
  rpc TokenValidate(TokenValidateRequest) returns (TokenValidateResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token/validate";
      body: "*";
    };
  };
  rpc TokenRefresh(TokenRefreshRequest) returns (TokenRefreshResponse) {
    option (google.api.http) = {
      post: "/v1/auth/token/refresh";
      body: "*";
    };
  };
}

message UserUpdateRequest{
  string email = 1;
  string status = 2;
  map<string, ListText> tenant_roles = 3 [json_name = "tenant_roles"];
  repeated string system_roles = 4 [json_name = "system_roles"];
}
message UserUpdateResponse{}

message UserCreateRequest {
  string email = 1;
  string status = 2;
  repeated string system_roles = 3 [json_name = "system_roles"];
  string password = 4;
}
message UserCreateResponse {}

message UserListRequest {}

message ListText {
  repeated string list = 1;
}

message UserListPayload {
  string email = 1;
  string status = 2;
  map<string, ListText> tenant_roles = 3 [json_name = "tenant_roles"];
  repeated string system_roles = 4 [json_name = "system_roles"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
}

message UserListResponse {
  repeated UserListPayload payload = 1;
}

message LoginPasswdRequest {
  string email = 1;
  string password = 2;
}
message LoginPasswdResponse {
  LoginTokenPayload payload = 1;
}

message UserChangePasswdRequest {
  string email = 1;
  string password = 2;
  string new_password = 3 [json_name = "new_password"];
}
message UserChangePasswdResponse {}

message TokenValidateRequest {}
message TokenValidateResponse {}

message LoginOauth2Request {
  string state = 1;
	string code = 2;
	string provider = 3;
	string redirect_url = 4;
}

message LoginToken{
  string value = 1 [json_name = "value"];
  google.protobuf.Timestamp expires_at = 2 [json_name = "expires_at"];
}


message LoginTokenPayload{
  string email = 1 [json_name = "email"];
  LoginToken access_token = 2 [json_name = "access_token"];
  LoginToken refresh_token = 3 [json_name = "refresh_token"];
}



message LoginOauth2Response {
  LoginTokenPayload payload = 1;
}

message TokenRefreshRequest {
}

message TokenRefreshResponse {
  LoginTokenPayload payload = 1;
}
